<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- showAsAction 主要有以下几种值可选：-->
    <!-- always表示永远显示在Toolbar中，如果屏幕空间不够则不显示；-->
    <!-- ifRoom表示屏幕空间足够的情况下显示在Toolbar中，不够的话就显示在菜单当中；-->
    <!-- never则表示永远显示在菜单当中。注意，Toolbar中的 action按钮只会显示图标，
    菜单中的action按钮只会显示文字。-->
    <item
        android:id="@+id/backup"
        android:icon="@drawable/ic_backup"
        android:title="@string/str_toolbar_backup"
        app:showAsAction="always" />
    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/str_toolbar_delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/str_toolbar_settings"
        app:showAsAction="never" />
</menu>